# coding-challenge-mexico-remake

./: .env.example  .gitignore  DEPLOY_GUIDE.md  README.md  database_schema.md  docker-compose.yml  project_structure.md  test_endpoints.ps1
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: main.rs
backend-rust/src/api/: dto.rs  handlers.rs  mod.rs  opportunities.rs  settings.rs  wallets.rs  ws.rs
backend-rust/src/config/: settings.rs
backend-rust/src/db/: mod.rs  models.rs  queries.rs
backend-rust/src/engine/: arbitrage.rs  market_stream.rs  mod.rs  rebalancer.rs  risk.rs
cache/: redis.conf
database/: init.sql
docs/: css_variables.md  software_architecture.md
frontend/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/composables/: useApi.ts  useDashboardSocket.ts  useFormatters.ts  useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/services/: dashboard.service.ts  http.ts  logs.service.ts  market.service.ts  opportunities.service.ts  settings.service.ts  trades.service.ts  wallets.service.ts
frontend/src/stores/: bot.store.ts  logs.store.ts  market.store.ts  market.ts  opportunities.store.ts  settings.ts  trades.store.ts  ui.store.ts  wallets.store.ts
frontend/src/styles/: globals.css  variables.css
frontend/src/types/: api.types.ts  domain.types.ts  websocket.types.ts
frontend/src/views/: ConfigurationView.vue  DashboardView.vue  LogsView.vue  MarketsView.vue  OperationsView.vue  OpportunitiesView.vue  PerformanceView.vue  SettingsView.vue  (+1 more)
(+46 files in other folders)
