[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
redis = { version = "0.23", features = ["tokio-comp"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.31"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
tungstenite = "0.20"
tokio-tungstenite = "0.20"
